update annotations in controllers and generated new api-docs.json
